# RevUnsup

./: .gitignore  ARCHITECTURE_REVERSE_ENGINEERING.md  INCIDENT_2026-04-09.md  README.md  WIKI.md  index.html  requirements.txt
.persona/: PERSONA.md
configs/: acceptance_criteria.yaml  lighthouse.yaml  patchcore_default.yaml
dashboard/: auth.js  index.html  orchestrator.html  supervisor.html  worker.html
deploy/cpp_inference/: CMakeLists.txt  main.cpp  patchcore_engine.cpp  patchcore_engine.h
docs/: A2A交接协议.md  AGENT_TASKS.md  L3-evaluation-spec.md  NOTION_BOARD_PROMPT.md  ONBOARDING.md  baseline_cdist.json  decrypted_AISE_SDK.cs  decrypted_infer_demo.cpp  decrypted_xyc_seg.cpp  deployment-changeset.md  exp_001_faiss.json  exp_001_report.md  exp_002_fp16.json  exp_002_report.md  exp_003_fp_scan.json  exp_003_report.md  exp_004_compile.json  exp_004_report.md  exp_005_trt_install.md  exp_006_trt_conversion.md  exp_006b_trt_conversion_truncate.md  exp_006c_trt_cu12.md  exp_006e_trt_cu12_offline.md  exp_007_customer_new_code_scan.md  exp_009_L0_prime_fp16_diag.md  exp_010_L0_v2_baseline.md  exp_011_chiproi02_eval.md  exp_011v2_chiproi02_customer_train.md  exp_014_coreset_ablation.md  exp_020_3way_comparison.md  handover_L0_baseline.md  handover_L0_export.md  handover_L0_prime.md  handover_L0_v2.md  handover_RU011.md  handover_RU011v2.md  handover_RU014.md  handover_RU020.md  sanity-check.md  封装版代码地图.md  (+6 more)
scripts/: env_check.py  extract_thresholds.py  prepare_dataset.py  rebuild_segmented_dataset.py  run_pipeline.py  train_patchcore.py  visualize_patchcore.py
(+59 files in other folders)
